--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,9 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<link rel='stylesheet' href='%sveltekit.assets%/global.css'>
+		<link rel='stylesheet' href='%sveltekit.assets%/login.css'>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
