--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+		<link rel='stylesheet' href='%sveltekit.assets%/fonts/inter/inter.css'>
 		<link rel='stylesheet' href='%sveltekit.assets%/global.css'>
 		<link rel='stylesheet' href='%sveltekit.assets%/login.css'>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
