more responsive better looking AI chat

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="%sveltekit.assets%/fonts/inter/inter.css" />
 		<link rel="stylesheet" href="%sveltekit.assets%/global.css" />
 		<link rel="stylesheet" href="%sveltekit.assets%/login.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/response.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 		<link
